--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,9 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProgramacionServiciosProcesos
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-j-8.0.31.jar=C:\\Users\\oscar.vi\u00f1an\\Downloads\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-j-8.0.31.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
