--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,10 +36,12 @@ dist.jlink.output=${dist.jlink.dir}/ProgramacionServiciosProcesos
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-j-8.0.31.jar=C:\\Users\\oscar.vi\u00f1an\\Downloads\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31.jar
+file.reference.mysql-connector-j-8.0.31.jar-1=C:\\Users\\oscar\\Downloads\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.0.31.jar}
+    ${file.reference.mysql-connector-j-8.0.31.jar}:\
+    ${file.reference.mysql-connector-j-8.0.31.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
