--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,13 +35,10 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProgramacionServiciosProcesos
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-8.0.31.jar=C:\\Users\\oscar.vi\u00f1an\\Downloads\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31.jar
 file.reference.mysql-connector-j-8.0.31.jar-1=C:\\Users\\oscar\\Downloads\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.mysql-connector-j-8.0.31.jar}:\
-    ${file.reference.mysql-connector-j-8.0.31.jar-1}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -77,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ProgramacionServiciosProcesos
-main.class=lanzaClaseJava.LanzaClaseJava
+main.class=lanzaWinExe.LanzaWinExe
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
